<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/fragmentHome"
        android:icon="@drawable/home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/fragmentCart"
        android:icon="@drawable/shopping_cart"
        android:title="@string/title_cart"
        app:actionViewClass="android.widget.TextView"/>
    <item
        android:id="@+id/fragmentFavorite"
        android:icon="@drawable/heart"
        android:title="@string/title_favorite"/>
    <item
        android:id="@+id/fragmentNotification"
        android:icon="@drawable/notification"
        android:title="@string/title_notifications"/>
    <item
        android:id="@+id/fragmentProfile"
        android:icon="@drawable/user"
        android:title="@string/title_profile"/>

</menu>